fix overflow x  hidden

--- a/src/index.scss
+++ b/src/index.scss
@@ -93,6 +93,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: $color-background;
   color: $color-dark;
+  overflow-x: hidden;
 }
 
 a,
